fixed spacing between rows on mobile.removed touch events

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 
 .row {
 	width:100%;
-	height:16.666666667%;
+	height:17%;
 	display:flex;
 	border-radius:1rem;
 }
